# EigenAttention

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
src/eigen_attention/: __init__.py  attention.py  similarity.py
tests/: test_attention.py  test_similarity.py
