[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "eigen-attention"
version = "0.1.0"
description = "Diversity-seeking attention via the Lorentz displacement primitive."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = ["torch>=2.0"]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/InauguralSystems/EigenAttention"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
